logout function and add css

--- a/com.kodbook/src/main/resources/templates/createPost.html
+++ b/com.kodbook/src/main/resources/templates/createPost.html
@@ -9,7 +9,7 @@
 	<nav>
 	    <span th:text="${session.username}"></span>
 		<a href="/openMyProfile">My profile</a>
-		<a href="/showPosts">Show Post</a>
+		<a href="/showPosts">Go Home</a>
 		<a href="/openEditProfile">Update profile</a>
 	</nav>
 
